Added state saving and slight style rework

--- a/app/src/main/res/layout/app_layout.xml
+++ b/app/src/main/res/layout/app_layout.xml
@@ -16,9 +16,12 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="center"
         android:text="Search"/>
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="@color/black"
+        android:dividerHeight="1dp"
         android:layout_below="@id/search_query"/>
 </RelativeLayout>
