--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_grey_200">#282828</color>
+    <color name="dark_grey_300">#3F3F3F</color>
     <color name="yellow">#FFFFD300</color>
+    <color name="transparent">#00000000</color>
 </resources>
