--- a/app/src/main/res/layout/app_layout.xml
+++ b/app/src/main/res/layout/app_layout.xml
@@ -1,27 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/dark_grey_200">
 
-    <EditText
-        android:id="@+id/search_query"
-        android:layout_width="256dp"
+    <LinearLayout
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter search query"/>
+        android:gravity="center"
+        android:background="@color/dark_grey_300">
 
-    <Button
-        android:id="@+id/search_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="center"
-        android:text="Search"/>
+        <EditText
+            android:id="@+id/search_query"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textColor="@color/white"
+            android:background="@color/transparent"
+            android:textColorHint="@color/white"
+            android:hint="Enter search query"
+            android:autofillHints="stopName"
+            android:inputType="text" />
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Search"/>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@color/black"
-        android:dividerHeight="1dp"
-        android:layout_below="@id/search_query"/>
+        android:dividerHeight="0dp"
+        android:background="@color/transparent"
+        android:layout_below="@id/search_bar"/>
 </RelativeLayout>
